FINALLY GOT AJAX WORKING!!!!!!!

--- a/static/arrivals.html
+++ b/static/arrivals.html
@@ -38,7 +38,7 @@
 				</h1>
 				<div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
 					<div class="accordion-body" id="div">
-						<h2>Arrivals at Shannon Airport<h2>
+						<h2>Arrivals at Shannon Airport</h2>
 						<table border="2" class="table table-hover" id="bookTable">
 			
 							<tr>
