updated readme. added images. renamed DAO file as I merged arrivals and departures into the one DAO file. modified htmls to have center bar.

--- a/static/arrivals.html
+++ b/static/arrivals.html
@@ -24,6 +24,15 @@
 			<img src="snnairport.jpeg" alt="Shannon Airport Logo" width="450" height="250">
 		</div>
 
+		<!-- Homepage button -->
+		<center>
+			<div class="row justify-content-center">						
+				<button type="button" class="btn btn-secondary  btn-lg">
+					<a href="/homepage.html" class="link-warning">Homepage</a>
+				</button>					
+			</div>		
+		</center><br>
+		
 		<!-- CARD -->
 		<div class="card">
 		
